# receipt-ocr

./: .gitignore  CORD_TO_YOLO_GUIDE.md  README.md  cord_download.py  main.py  pyproject.toml  train_yolo11n_cord.py
notebooks/: 02_detection_training.ipynb  02_ocr.ipynb
src/api/: main.py
src/detection/: cord_to_yolo.py  dataset.py  model.py  sroie_to_yolo.py  utils.py
src/ocr/: engine.py  utils.py
src/parsing/: extractor.py  grouping.py
src/preprocessing/: __init__.py  filters.py  geometry.py  pipelines.py
